--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,12 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/game_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".TestGame"
+        android:theme="@style/AppTheme.NoActionBar">
+        <!--android:theme="@style/AppTheme">-->
+        <activity android:name=".BreakoutGame.Breakout"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:screenOrientation="portrait"
             >
